// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer className is test_drawer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer test_drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="opacity:0;transition:opacity .3s"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer closable is false 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer destroyOnClose is true 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="opacity:0;transition:opacity .3s"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer getContainer return undefined 1`] = `<div />`;

exports[`Drawer getContainer return undefined 2`] = `
<div>
  <div
    class=""
  >
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open osui-drawer"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 400px;"
      >
        <div
          class="ant-drawer-content"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header ant-drawer-header-close-only"
            >
              <div
                class="ant-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="ant-drawer-close"
                  type="button"
                >
                  <svg
                    class="osui-icon "
                    focusable="false"
                    height="1024"
                    viewBox="0 0 1024 1024"
                    width="1024"
                  >
                    <path
                      d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      stroke="currentColor"
                      stroke-width="64"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer have a footer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
          <div
            class="ant-drawer-footer"
          >
            Test Footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer have a title 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
              <div
                class="ant-drawer-title"
              >
                Test Title
              </div>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render correctly 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render top drawer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-top osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateY(-100%);-ms-transform:translateY(-100%);height:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Drawer style/drawerStyle/headerStyle/bodyStyle should work 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    style="background-color:#08c"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="background-color:#08c"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
            style="background-color:#08c"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <svg
                  class="osui-icon "
                  focusable="false"
                  height="1024"
                  viewBox="0 0 1024 1024"
                  width="1024"
                >
                  <path
                    d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    stroke="currentColor"
                    stroke-width="64"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
            style="background-color:#08c"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer support closeIcon 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right osui-drawer"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header ant-drawer-header-close-only"
          >
            <div
              class="ant-drawer-header-title"
            >
              <button
                aria-label="Close"
                class="ant-drawer-close"
                type="button"
              >
                <span>
                  close
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
